// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders default 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt={undefined}
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <a
        href="/"
      >
        Foobar
      </a>
      <time
        className="Comment-meta-created"
        dateTime="2017-12-22T05:28:22.005Z"
        title="2017-12-22 05:28"
      >
        hace 1 hora
      </time>
    </h6>
    <div
      className="Comment-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
  </div>
</div>
`;

exports[`Comment renders with replies 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt={undefined}
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <a
        href="/"
      >
        Foobar
      </a>
      <time
        className="Comment-meta-created"
        dateTime="2017-12-22T05:28:22.005Z"
        title="2017-12-22 05:28"
      >
        hace 1 hora
      </time>
    </h6>
    <div
      className="Comment-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ver 2 respuestas
         
        <i
          className="fa fa-chevron-down"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Comment renders with reply 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt={undefined}
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <a
        href="/"
      >
        Foobar
      </a>
      <time
        className="Comment-meta-created"
        dateTime="2017-12-22T05:28:22.005Z"
        title="2017-12-22 05:28"
      >
        hace 1 hora
      </time>
    </h6>
    <div
      className="Comment-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ver respuesta
         
        <i
          className="fa fa-chevron-down"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Comment renders with visible replies 1`] = `
<div
  className="Comment mb-4 d-flex"
>
  <div
    className="Comment-avatar mr-3"
  >
    <img
      alt={undefined}
      className="rounded Comment-avatar"
      src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
    />
  </div>
  <div
    className="Comment-content"
  >
    <h6
      className="Comment-author"
    >
      <a
        href="/"
      >
        Foobar
      </a>
      <time
        className="Comment-meta-created"
        dateTime="2017-12-22T05:28:22.005Z"
        title="2017-12-22 05:28"
      >
        hace 1 hora
      </time>
    </h6>
    <div
      className="Comment-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "I am a text comment",
        }
      }
    />
    <button
      className="btn btn-link text-dark Comment-replies-toggler"
      onClick={[Function]}
    >
      <span>
        Ocultar respuestas 
        <i
          className="fa fa-chevron-up"
        />
      </span>
    </button>
    <div
      className="Comment-replies mt-4"
    >
      <div
        className="Comment mb-4 d-flex"
      >
        <div
          className="Comment-avatar mr-3"
        >
          <img
            alt={undefined}
            className="rounded Comment-avatar"
            src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
          />
        </div>
        <div
          className="Comment-content"
        >
          <h6
            className="Comment-author"
          >
            <a
              href="/"
            >
              Foobar
            </a>
            <time
              className="Comment-meta-created"
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </h6>
          <div
            className="Comment-body"
            dangerouslySetInnerHTML={
              Object {
                "__html": "I am a reply comment",
              }
            }
          />
        </div>
      </div>
      <div
        className="Comment mb-4 d-flex"
      >
        <div
          className="Comment-avatar mr-3"
        >
          <img
            alt={undefined}
            className="rounded Comment-avatar"
            src="https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730"
          />
        </div>
        <div
          className="Comment-content"
        >
          <h6
            className="Comment-author"
          >
            <a
              href="/"
            >
              Foobar
            </a>
            <time
              className="Comment-meta-created"
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 hora
            </time>
          </h6>
          <div
            className="Comment-body"
            dangerouslySetInnerHTML={
              Object {
                "__html": "I am a reply comment",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
